erDiagram
    SOURCES {
        uuid id PK
        varchar name
        varchar url UK
        source_type_enum source_type
        tier_enum tier
        varchar language
        timestamp created_at
    }
    FACTS {
        uuid id PK
        text fact_text UK
        domain_enum domain
        varchar subdomain
        uuid source_id FK
        jsonb entities
        float confidence
        text_array tags
        vector embedding
        timestamp created_at
    }
    QUESTIONS {
        uuid id PK
        text question_text
        text correct_answer
        varchar difficulty
        uuid source_fact_id FK
        timestamp created_at
    }
    QUESTION_FACTS {
        uuid question_id FK
        uuid fact_id FK
    }
    GENERATION_METADATA {
        uuid question_id FK
        varchar model_name
        varchar model_version
        jsonb prompt_used
        timestamp generated_at
    }

    SOURCES ||--o{ FACTS : "provides"
    FACTS ||--o{ QUESTION_FACTS : "supports"
    QUESTIONS ||--o{ QUESTION_FACTS : "based on"
    QUESTIONS ||--|| GENERATION_METADATA : "generated by"
